# Micro-SaaS-Starter-Kit

./: .dockerignore  .env.example  .env.production.template  .gitignore  CONTRIBUTING.md  Caddyfile  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  audit-prompt-23-2026-05-16.md  docker-compose.yml  eslint.config.js  instrumentation.ts  jest.config.js  middleware.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  proxy.ts  saas-business-system-map.html  sentry.client.config.ts  sentry.server.config.ts  tailwind.config.ts
notifier/: .gitignore  Dockerfile  config.py  database.py  main.py  pyproject.toml  rate_limiter.py  templates.py
notifier/tests/: conftest.py  test_notifier.py  test_templates.py
worker/: Dockerfile  pyproject.toml
worker/scripts/: regenerate_thumbnails.py
worker/tests/: conftest.py  test_autoapply_careerops.py  test_autoapply_linkedin.py  test_jobfit.py  test_resolve.py  test_resume_quality.py  test_resume_render.py  test_scrapers_phase2.py  test_store.py  test_tailor.py
worker/tests/fixtures/: fernet_fixture.py  fernet_sample.json
worker/worker/: config.py  main.py
worker/worker/ai/: cover_letter.py  critique.py  jobfit.py  keywords.py  rescue.py  resume.py  tailor.py
worker/worker/ai/prompts/: cover_letter.txt  resume.txt  resume_v2.txt  tailor_cover_letter.txt  (+3 more)
worker/worker/autoapply/: careerops.py  common.py  eligibility.py  linkedin.py
worker/worker/routes/: jobs.py
worker/worker/scrapers/: ashby.py  greenhouse.py  himalayas.py  lever.py  personio.py  recruitee.py  resolve.py  workable.py  wwr.py
(+395 files in other folders)
