[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "resumeai-notifier"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "redis[hiredis]>=5.0",
    "httpx>=0.27",
    "asyncpg>=0.29",
    "structlog>=24.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
